--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.129",
     "@mui/material": "^5.12.3",
     "firebase": "^9.21.0",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
+    "react-flip-move": "^3.0.5",
     "react-format-currency": "^0.1.2",
+    "react-notification": "^6.8.5",
+    "react-notifications-component": "^4.0.1",
     "react-router": "^6.11.1",
     "react-router-dom": "^6.11.1",
+    "react-simple-image-slider": "^2.4.1",
     "react-toastify": "^9.1.2",
     "tailwind-gradient-mask-image": "^1.0.0"
   },
